# Prompt

./: .env.example  .gitignore  0001-security-bind-redis-to-localhost-only-DO-security-no.patch  0002-infra-restore-TLS-443-binding-and-letsencrypt-volume.patch  LICENSE  Makefile  README.md  RUN_INS.txt  TEAM_INSTRUCTIONS.txt  deploy.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: admin.py  auth.py  categories.py  events.py  holds.py  orders.py  org.py  profile.py  scans.py  schemas.py  search.py  ws.py
backend/app/core/: config.py  deps.py  security.py  telemetry.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_init.py  0002_org_dashboard_matview.py  0003_zones_categories_card_holders.py  0004_payouts_currency_uniq.py  0005_drop_zones.py  0006_event_proposals.py  0007_backfill_row_priced_tiers.py
backend/app/services/: booking.py  cache.py  holds.py  pricing.py  qr.py  redis_client.py  search.py
backend/app/ws/: hub.py
backend/tests/: test_smoke.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Nav.tsx  ui.tsx
frontend/src/components/seats/: GAPicker.tsx  SeatBtn.tsx  SeatedHall.tsx  seat-colors.ts
frontend/src/lib/: api.ts  auth-context.ts  auth.tsx  checkout-context.ts  checkout.tsx  format.ts  use-document-title.ts
frontend/src/pages/: Admin.tsx  Browse.tsx  EventDetail.tsx  GateScan.tsx  Holders.tsx  Login.tsx  MyTickets.tsx  OrgAttendees.tsx  OrgEvents.tsx  Payment.tsx  Profile.tsx  Register.tsx  Seats.tsx
infra/grafana/dashboards/: hold_pay_confirm.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: datasources.yaml
infra/loki/: loki.yaml
infra/nginx/: nginx.conf  nginx.dev.conf
infra/nginx/lua/: token_bucket.lua
infra/otel/: config.yaml
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yaml
ops/: deploy.sh
ops/cron/: __init__.py  payouts.py  rollup.py  schedule.py  sweeper.py
